--- a/css.css
+++ b/css.css
@@ -10,9 +10,9 @@ body{
 .container{
 	width: 80%;
 	margin:auto;
-	overflow: hidden;
+	overflow: bold;
 	text-align: center;
-	colour:black;
+	colour:orange;
 
 }
 
