--- a/css.css
+++ b/css.css
@@ -59,7 +59,7 @@ body{
 	text-align:center;
 }
 #showcase h1{
-	color:#fff;
+	colorb:black;
 	font-size:50px;
 	line-height:1.6em;
 	padding-top:30px;
